chore: complete import and update parced eac for middleware (#12)
